--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="F:/New Hub/Ludum Dare/lwjgl/jar/lwjgl.jar"/>
+	<classpathentry kind="lib" path="F:/New Hub/Ludum Dare/slick-util.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
