--- a/.classpath
+++ b/.classpath
@@ -1,13 +1,11 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="res"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
-		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="F:/New Hub/Ludum Dare/lwjgl-2.9.3/lwjgl-2.9.3/native/windows"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="F:/New Hub/Ludum Dare/lwjgl-2.9.3/lwjgl-2.9.3/jar/lwjgl.jar"/>
-	<classpathentry kind="lib" path="F:/New Hub/Ludum Dare/slick-util.jar"/>
-	<classpathentry kind="output" path="bin"/>
+<?xml version="1.0" encoding="UTF-8"?><classpath>
+<classpathentry kind="src" path="src"/>
+<classpathentry kind="src" path="res"/>
+<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+<classpathentry kind="lib" path="F:/New Hub/Ludum Dare/lwjgl-2.9.3/lwjgl-2.9.3/jar/lwjgl.jar"/>
+<classpathentry kind="lib" path="F:/New Hub/Ludum Dare/slick-util.jar"/>
+<classpathentry kind="output" path="bin"/>
+<classpathentry kind="lib" path="/storage/emulated/0/AppProjects/lwjgl/lwjgl-2.9.3/jar/lwjgl.jar"/>
+<classpathentry kind="lib" path="/storage/emulated/0/AppProjects/slick/lib/slick-util.jar"/>
+<classpathentry kind="lib" path="/storage/emulated/0/AppProjects/lwjgl/lib/natives-windows.jar"/>
 </classpath>
